# dotfiles

./: .gitignore  .luarc.json  .stow-local-ignore  LICENSE  README.md  arch_mirror_list.txt  get_host.sh  ilmpc_all_native_packages.txt  justfile  makefile  p14s-packages.txt  setup_biltower.sh  setup_eistower.sh  setup_ilmpc.sh  setup_p14s.sh  setup_t480.sh  setup_x240.sh  thinkfan.conf  throttled.conf
FreeCAD/.config/FreeCAD/: FreeCAD.conf  system.cfg  user.cfg
bash/: .bashrc
clang-format/: .clang-format
code-templates/code-templates/ros/cpp_package/: CMakeLists.txt  package.xml
code-templates/code-templates/ros/cpp_package/include/: icp_matcher.h
code-templates/code-templates/ros/cpp_package/src/: main.cpp
code-templates/code-templates/ros/cpp_package/src/icp_matcher/: icp_matcher.cpp
code-templates/code-templates/ros/python_package/: CMakeLists.txt  README.md  package.xml
code-templates/code-templates/ros/python_package/config/: kate_joy_parameter.yaml  settings.yaml
code-templates/code-templates/ros/python_package/launch/: package.launch
code-templates/code-templates/ros/python_package/scripts/: main.py
gitconf/: .gitconfig
gitconf-work/: .gitconfig-job.gpg  .gitignore  .stow-local-ignore
latexindent-ctan/latexindent-ctan/: install.txt
latexmk/: .latexmkrc
locale/.config/: locale.conf
mime-apps/.config/: mimeapps.list
mpd-notification/.config/: mpd-notification.conf
prettier-format/: .prettierrc
scripts/scripts/: battery-notify.sh  changeVolume.sh  changeVolumePipewire.sh  change_artist.sh  check-dotfiles.sh  check-ips.sh  check_powerbutton  controlVolumePipewire.py  create_symlinks_ilmpc.sh  create_symlinks_p14s.sh  create_symlinks_t480.sh  create_symlinks_t540p.sh  create_symlinks_x240.sh  del_files_listed_in_file.sh  disable-cpu-cores.sh  downsize_images.sh  eduroam-linux-TUI.sh  empris.py  fixMusicTitle.sh  get_cputemp.sh  getsong.sh  i3_switch_workspace.sh  lock.sh  lock_sway.sh  lockscreen.sh  move-mouse.sh  music_test.py  nightmode.sh  notifyBrightness.sh  notifyCaps.sh  notifyVolume.sh  notifyVolumePipewire.sh  playNextOrPrevious.sh  playPauseToggle.py  playPauseToggle.sh  popup-calendar.sh  powermenu.sh  presentation-mode.sh  qmk_led_conf_helper.py  reinstallAllPackages.sh  (+8 more)
ssh/.ssh/: config
starship/.config/: starship.toml
tmux/: .tmux.conf
touchpad_conf/: 40-libinput.conf
xinit/: .xinitrc
xorg.conf.d/: 00-keyboard.conf  10-monitor.conf  20-intel.conf  40-libinput.conf
zsh/: .stow-local-ignore  .zsh_aliases  .zsh_aliases_work.gpg  .zshrc
(+385 files in other folders)
