<?xml version="1.0"?>
<package format="2">
    <name>icp_matcher</name>
    <version>0.0.0</version>
    <description>This package does stuff</description>
    <author>Bernd Müller</author>
    <maintainer email="bernd.mueller@iosb-ast.fraunhofer.de">Bernd Müller</maintainer>
    <maintainer email="bernd@muellerbernd.de">Bernd Müller</maintainer>
    <!-- <url type="website">https://github.com/...</url> -->
    <!-- <url type="repository">https://github.com/...</url> -->
    <!-- <url type="bugtracker">https://github.com/...</url> -->
    <license>Fraunhofer proprietary</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>tf2_ros</build_depend>

    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>tf2_ros</build_export_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>tf2_ros</exec_depend>


</package>
